--- a/CKS_bbokmarks.html
+++ b/CKS_bbokmarks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE NETSCAPE-Bookmark-file-1>
 <!-- This is an automatically generated file.
      It will be read and overwritten.
-     DO NOT EDIT! -->
+     DO NOT EDIT! It said so, but I EDITED XD .. -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
 <TITLE>Bookmarks</TITLE>
 <H1>Bookmarks</H1>
